--- a/afsa_resume/index.html
+++ b/afsa_resume/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Resume</title>
+  
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -85,14 +86,24 @@
     </header>
 
     <!-- about me -->
-    <section>
+    <section style="display: flex; gap: 20px;">
+     <div style="width: 50%;">
       <h2>About Me</h2>
-    <p>I am a front-end developer with experience in creating responsive web applications. My goal is to create user-friendly and visually appealing interfaces that enhance the overall user experience.</p>
+      <p>I am a front-end developer with experience in creating responsive web applications. My goal is to create user-friendly and visually appealing interfaces that enhance the overall user experience.</p>
+     </div>
+
+     <div>
+      <h2>Contact</h2>
+      <p>Phone: +88017235345</p>
+      <p>hafsacse@gmail.com</p>
+      <p>123,Rupatali Barisal</p>
+
+     </div>
     </section>
 
     <hr>
 
-    
+    <!-- education -->
 
     <section class="section education">
       <h2>Education</h2>
